--- a/Multiple EVs (on-going)/multiple_evs.yaml
+++ b/Multiple EVs (on-going)/multiple_evs.yaml
@@ -4,7 +4,7 @@
 # Simulation Parameters
 ##############################################################################
 timescale: 15 # in minutes per step
-simulation_length: 50 #90 # in steps per simulation
+simulation_length: 50 # in steps per simulation
 
 ##############################################################################
 # Date and Time
@@ -38,7 +38,7 @@ discharge_price_factor: 1 # how many times more abs(expensive/cheaper) it is to 
 ##############################################################################
 v2g_enabled: True # True or False
 
-number_of_charging_stations: 1
+number_of_charging_stations: 10
 number_of_transformers: 1
 number_of_ports_per_cs: 1
 # Provide path if you want to load a specific charging topology,
@@ -60,15 +60,14 @@ tr_seed: -1 # seed for the random number generator of transformer loads(-1 for r
 
 inflexible_loads:
   include: True # True or False
-  # can sometimes have scale error because perhaps the multiplier is too small.
-  inflexible_loads_capacity_multiplier_mean: 0.05 # 1 is default, the higher the number the more inflexible loads
+  inflexible_loads_capacity_multiplier_mean: 1 # 1 is default, the higher the number the more inflexible loads
   forecast_mean: 10 # in percentage of load at time t%
   forecast_std: 10 # in percentage of load at time t%
 
 # PV solar Power
 solar_power:
   include: True # True or False
-  solar_power_capacity_multiplier_mean: 0.3 # 1 is default, the higher the number the more solar power
+  solar_power_capacity_multiplier_mean: 2 # 1 is default, the higher the number the more solar power
   forecast_mean: 100 # in percentage of load at time t%
   forecast_std: 5 # in percentage of load at time t%
 
@@ -115,6 +114,7 @@ charging_station:
 ev:
   battery_capacity: 50 # in kWh
   min_battery_capacity: 10 # in kWh
+  min_emergency_battery_capacity: 0
   desired_capacity: 30 # in kWh
   max_ac_charge_power: 22 # in kW
   min_ac_charge_power: 0 # in kW
